# sigil-compiler

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
assets/: README.md
docs/: algorithm.md  file_formats.md  texture_sound.md
sigil/: __init__.py  cli.py
sigil/geometry/: __init__.py  equation.py  gpr.py  merge.py  ray.py  scalar_field.py  segmentation.py
sigil/io/: __init__.py  compression.py  mesh_reader.py  sof_reader.py  sof_writer.py  sound_reader.py  ssf_reader.py  ssf_writer.py  stf_reader.py  stf_writer.py  texture_reader.py
sigil/pipeline/: __init__.py  balloon_eikonal.py  balloon_hybrid.py  balloon_nn.py  balloon_pipeline.py  balloon_sklearn.py  config.py  csg_pipeline.py  geometry_pipeline.py  sound_pipeline.py  texture_pipeline.py
sigil/sound/: __init__.py  decomposition.py  noise_model.py  partial_tracking.py  residual.py  sr_envelope.py
sigil/texture/: __init__.py  decomposition.py  procedural.py  residual.py  sr_texture.py
sigil/validation/: __init__.py  compare.py  metrics.py  render.py
tests/: conftest.py
tests/test_geometry/: test_blend.py  test_equation.py  test_gpr.py  test_merge.py  test_pysr_backend.py  test_ray.py  test_scalar_field.py  test_segmentation.py  test_sparse_regression.py
tests/test_io/: test_compression.py  test_mesh_reader.py  test_sound_reader.py  test_texture_reader.py
tests/test_pipeline/: test_balloon_pipeline.py  test_full_pipeline.py  test_geometry_pipeline.py
tests/test_sound/: test_partial_tracking.py  test_sr_envelope.py
tests/test_texture/: test_procedural.py  test_sr_texture.py
(+11 files in other folders)
