[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sigil"
version = "0.1.0"
description = "SIGIL Asset Compiler"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "sympy",
    "torch",
    "trimesh",
    "pygltflib",
    "pysr",
    "Pillow",
    "imageio",
    "soundfile",
    "pydub",
]

[project.scripts]
sigil = "sigil.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
